Added simple form gem

--- a/app/views/beers/show.html.erb
+++ b/app/views/beers/show.html.erb
@@ -91,11 +91,13 @@
 </div>
 
 <script>
-	$('.review-rating').raty({
-		readOnly: true,
-		score: function() {
-			return $(this).attr('data-score');
-		},
-		path: '/assets/'
-	});
+	$(document).ready(function() {
+	    $('.review-rating').raty({
+      readOnly: true,
+      score: function() {
+        return $(this).attr('data-score');
+    },
+      path: '/assets/'
+  });
+	   })
 </script>
