--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -1,8 +1,18 @@
 				<%= simple_form_for([@beer, @beer.reviews.build]) do |f| %>
 
 					<div id = "rating-form" >
-						<%= f.input :rating %>
+						<label> Rating </label>
 					</div>
 					<%= f.input :comment %>
 					<%= f.button :submit, :class=>"btn-custom2"%>
 				<% end %>
+
+<script>
+	$(document).ready(function() {
+	    $('#rating-form').raty('set'{
+	    number: 5,
+      path: '/assets/',
+      scoreName: 'review[rating]'
+    });
+	 })
+</script>
