--- a/app/views/reviews/edit.html.erb
+++ b/app/views/reviews/edit.html.erb
@@ -3,10 +3,20 @@
 		<h1>Edit Review </h1>
 				<%= simple_form_for([@beer, @review]) do |f| %>
 					<div id = "rating-form" >
-						<%= f.input :rating %>
+						<label> Rating </label>
 					</div>
 					<%= f.input :comment %>
 					<%= f.button :submit, :class=>"btn-custom2"%>
 				<% end %>
 			</div>
 </div>
+
+<script>
+	$(document).ready(function() {
+    $('#rating-form').raty('set'{
+    	number: 5,
+      path: '/assets/',
+      scoreName: 'review[rating]'
+    });
+   })
+ </script>
