added the top 3 beers

--- a/app/views/lager/index.html.erb
+++ b/app/views/lager/index.html.erb
@@ -5,7 +5,7 @@
 		e.stopPropagation();
 	});
 </script>
-</head>
+
 <body>
 <nav class="navbar navbar-default navbar-expand-lg navbar-light">
 	<div class="navbar-header d-flex col">
@@ -56,4 +56,16 @@
 
 			<div class="topic">
 			<h1>Top 3 lager of the month</h1>
+			</div>
+
+			<br />
+			<br />
+			<div class="ipa">
+				<div style="width:1800px; margin: 0 auto">
+				<div style="width: 1800px; display: inline-block">
+				<div class="row">
+				<br />
+				<img src="<%=image_url("bluepoint.png") %>" class="img-fluid" alt="Responsive image">
+				<img src="<%=image_url("granville.png") %>" class="img-fluid" alt="Responsive image">
+				<img src="<%=image_url("messina.jpg") %>" class="img-fluid" alt="Responsive image">
 			</div>
