--- a/app/views/stout/index.html.erb
+++ b/app/views/stout/index.html.erb
@@ -58,3 +58,15 @@
 <div class="topic">
 <h1>Top 3 Stout of the month</h1>
 </div>
+
+<br />
+<br />
+<div class="ipa">
+	<div style="width:1200px; margin: 0 auto">
+	<div style="width: 1600px; display: inline-block">
+	<div class="row">
+	<br />
+	<img src="<%=image_url("choco.jpeg") %>" class="img-fluid" alt="Responsive image">
+	<img src="<%=image_url("nitro.jpeg") %>" class="img-fluid" alt="Responsive image">
+	<img src="<%=image_url("messina.jpg") %>" class="img-fluid" alt="Responsive image">
+</div>
