--- a/app/views/ipa/index.html.erb
+++ b/app/views/ipa/index.html.erb
@@ -56,25 +56,14 @@
 <div class="topic">
 <h1>Top 3 IPA of the month</h1>
 </div>
-
-<div class="topbeer">
-<% @beers.each do |beer| %>
-<div class="card mb-3 <%= beer.style %> <%= beer.region %>" style="max-width: 600px">
-		<a style="color:inherit; text-decoration:inherit" href=<%=beer_path(beer.id)%>>
-			<div class="row no-gutters">
-				<div class="col-sm-10">
-					<div class="card-body">
-						<h5 class="card-title"><%= beer.title %></h5>
-							<p class="card-text"><small class="text-muted"><%= beer.style %></small></p>
-							<p class="card-text"><small class="text-muted"><%= beer.region %></small></p>
-							<p class="card-text"><small class="text-muted"><%= beer.country %></small></p>
-							<p class="card-text"><%= beer.description %></p>
-					</div>
-				</div>
-				<div class="col-md-2">
-					<img class="card-img" style="height:250px; width:70px; margin:10px" src=<%= beer.image %> alt="...">
-				</div>
-			</div>
-</div>
-<%end%>
+<br />
+<br />
+<div class="ipa">
+	<div style="width:1100px; margin: 0 auto">
+	<div style="width: 1600px; display: inline-block">
+	<div class="row">
+	<br />
+	<img src="<%=image_url("littlecreatures.jpeg") %>" class="img-fluid" alt="Responsive image">
+	<img src="<%=image_url("daidai.png") %>" class="img-fluid" alt="Responsive image">
+	<img src="<%=image_url("president.jpg") %>" class="img-fluid" alt="Responsive image">
 </div>
