--- a/app/views/guides/new.html.erb
+++ b/app/views/guides/new.html.erb
@@ -20,8 +20,8 @@
 	<div id="navbarCollapse" class="collapse navbar-collapse justify-content-start">
 		<ul class="nav navbar-nav">
 			<li class="nav-item"><a href="/beers" class="nav-link">Beers</a></li>
-			<li class="nav-item"><a href="/guides" class="nav-link">Guides</a></li>
-			<li class="nav-item dropdown">
+			<li class="nav-item"><a href="/guides" class="nav-link">My Guides</a></li>
+			<!-- <li class="nav-item dropdown">
 				<a data-toggle="dropdown" class="nav-link dropdown-toggle" href="#">Regions <b class="caret"></b></a>
 				<ul class="dropdown-menu">
 					<li><a href="#" class="dropdown-item">North America</a></li>
@@ -30,7 +30,7 @@
 					<li><a href="#" class="dropdown-item">Asia</a></li>
           <li><a href="#" class="dropdown-item">Oceania</a></li>
 				</ul>
-			</li>
+			</li> -->
 		</ul>
 
 		<!-- SEARCH -->
