--- a/app/views/guides/show.html.erb
+++ b/app/views/guides/show.html.erb
@@ -5,7 +5,7 @@
 		e.stopPropagation();
 	});
 </script>
-</head>
+
 <body>
 <nav class="navbar navbar-default navbar-expand-lg navbar-light">
 	<div class="navbar-header d-flex col">
@@ -21,8 +21,8 @@
 	<div id="navbarCollapse" class="collapse navbar-collapse justify-content-start">
 		<ul class="nav navbar-nav">
 			<li class="nav-item"><a href="/beers" class="nav-link">Beers</a></li>
-			<li class="nav-item"><a href="/guides" class="nav-link">Guides</a></li>
-			<li class="nav-item dropdown">
+			<li class="nav-item"><a href="/guides" class="nav-link">My Guides</a></li>
+			<!-- <li class="nav-item dropdown">
 				<a data-toggle="dropdown" class="nav-link dropdown-toggle" href="#">Regions <b class="caret"></b></a>
 				<ul class="dropdown-menu">
 					<li><a href="#" class="dropdown-item">North America</a></li>
@@ -31,7 +31,7 @@
 					<li><a href="#" class="dropdown-item">Asia</a></li>
           <li><a href="#" class="dropdown-item">Oceania</a></li>
 				</ul>
-			</li>
+			</li> -->
 			<!-- <li class="nav-item active"><a href="#" class="nav-link">Pricing</a></li>
 			<li class="nav-item"><a href="#" class="nav-link">Blog</a></li>
 			<li class="nav-item"><a href="#" class="nav-link">Contact</a></li> -->
@@ -60,10 +60,12 @@
 </body>
 
 
-<h1>This is a guide/show page!</h1>
-<br />
+
 
 <div class="container">
+	<br />
+	<h1>Too drunk to be putting stuff here ~~</h1>
+	<br />
 <img src="<%=image_url("craftbeer.jpg") %>" class="img-fluid" alt="Responsive image">
 </div>
 <br />
