--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -21,8 +21,8 @@
     <div id="navbarCollapse" class="collapse navbar-collapse justify-content-start">
         <ul class="nav navbar-nav">
             <li class="nav-item"><a href="#" class="nav-link">Beers</a></li>
-            <li class="nav-item"><a href="#" class="nav-link">Guides</a></li>
-            <li class="nav-item dropdown">
+            <li class="nav-item"><a href="#" class="nav-link">My Guides</a></li>
+            <!-- <li class="nav-item dropdown">
                 <a data-toggle="dropdown" class="nav-link dropdown-toggle" href="#">Regions <b class="caret"></b></a>
                 <ul class="dropdown-menu">
                     <li><a href="#" class="dropdown-item">North America</a></li>
@@ -31,7 +31,7 @@
                     <li><a href="#" class="dropdown-item">Asia</a></li>
          <li><a href="#" class="dropdown-item">Oceania</a></li>
                 </ul>
-            </li>
+            </li> -->
         </ul>
 
         <!-- <form class="navbar-form form-inline">
@@ -40,7 +40,7 @@
                 <span class="input-group-addon"><i class="material-icons"></i></span>
             </div>
         </form> -->
-        
+
         <ul class="nav navbar-nav navbar-right ml-auto">
                 <% if user_signed_in? %>
                         <li class="nav-item">
