edited reviews headr

--- a/app/views/beers/show.html.erb
+++ b/app/views/beers/show.html.erb
@@ -78,7 +78,7 @@
 	   <div class="row no-gutters">
 	   	<div class= "col-md-12">
 	   		<div class= "reviews">
-	   			<h1> Reviews </h1>
+	   			<h2><u> Reviews </u> </h2>
 	   			<%= render @beer.reviews %>
 	   			<div>
 	   				<%= link_to "Add Reviews", new_beer_review_path(@beer), class:"btn-custom" %>
